<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tabLayout"
            />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@android:color/holo_blue_bright"
            app:tabTextColor="@android:color/holo_green_dark"
            app:tabIndicatorColor="@android:color/holo_orange_dark"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
        </android.support.design.widget.TabLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@android:drawable/ic_dialog_email"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="37dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
</RelativeLayout>
